<resources>
    <string name="app_name">HomeWork_5</string>
    <string name="background_image_content_description">background_image</string>
    <string name="camera_image_content_description">camera_image</string>
    <string name="profile_picture_content_description">profile_picture</string>
    <string name="music_note_icon_content_description">music_note</string>
    <string name="like_button_content_description">like_button</string>
    <string name="more_button_content_description">more_button</string>
    <string name="send_button_content_description">send_button</string>
    <string name="comment_button_content_description">comment_button</string>
    <string name="title">Reels</string>
    <string name="follow_button_text">Follow</string>
    <string name="user_name">awsm_jane</string>
    <string name="reels_text">Try at your own risk</string>
    <string name="music_text">Original music</string>
    <string name="settings">Settings</string>
    <string name="archive">Archive</string>
    <string name="activity">Your activity</string>
    <string name="qr_code">QR Code</string>
    <string name="saved">Saved</string>
    <string name="close_friends">Close Friends</string>
    <string name="discover_people">Discover People</string>
    <string name="information_center">COVID-19 Information Center</string>
</resources>