<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262626"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="52dp">

    <TextView
        android:id="@+id/settings_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:drawableStartCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/archive_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/archive"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:drawableStartCompat="@drawable/ic_archive" />

    <TextView
        android:id="@+id/activity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/activity"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:drawableStartCompat="@drawable/ic_activity" />

    <TextView
        android:id="@+id/qr_code_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/qr_code"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:drawableStartCompat="@drawable/ic_qr_code" />

    <TextView
        android:id="@+id/saved_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/saved"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:drawableStartCompat="@drawable/ic_save" />

    <TextView
        android:id="@+id/close_friends_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/close_friends"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:drawableStartCompat="@drawable/ic_bullet_list" />

    <TextView
        android:id="@+id/discover_people_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/discover_people"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:drawableStartCompat="@drawable/ic_add_person" />

    <TextView
        android:id="@+id/information_center_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/information_center"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:drawableStartCompat="@drawable/ic_information" />
</LinearLayout>