<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_image" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/camera_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/camera_image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_camera"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_picture_image_view"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/profile_picture_content_description"
                app:srcCompat="@drawable/profile_image" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/user_name"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Space
                android:layout_width="12dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/follow_button"
                style="@style/Widget.App.FollowButton.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/follow_button_text"
                tools:cornerRadius="8dp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/reels_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/reels_text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/music_note_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/music_note_icon_content_description"
                app:srcCompat="@drawable/ic_music_note" />

            <Space
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="@string/music_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/like_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/like_button_content_description"
        app:layout_constraintBottom_toTopOf="@+id/like_count_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_like"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/like_count_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="19.6k"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/comment_image_view"
        app:layout_constraintEnd_toEndOf="@+id/background_image_view"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/more_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/more_button_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_more" />

    <ImageView
        android:id="@+id/send_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/send_button_content_description"
        app:layout_constraintBottom_toTopOf="@+id/more_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_send" />

    <TextView
        android:id="@+id/comments_counter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="110"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/send_image_view"
        app:layout_constraintEnd_toEndOf="@+id/comment_image_view" />

    <ImageView
        android:id="@+id/comment_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/comment_button_content_description"
        app:layout_constraintBottom_toTopOf="@+id/comments_counter_text_view"
        app:layout_constraintEnd_toEndOf="@+id/send_image_view"
        app:srcCompat="@drawable/ic_comment"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>